Fix layout issue in IE

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -60,6 +60,7 @@
 		flex-direction: column;
 	}
 	.bar-main {
+		flex: inherit;
 		max-width: inherit !important;
 	}
 	.bar-side {
